# activizdotnet

./: .gitattributes  .gitignore  ActiVizDotNetCPack.cmake  ActiVizDotNetVersion.cmake.in  AssembleExtraSources.cmake  AssemblyInfo.cs.in  BuildExamples.cmake  CMakeCache.sample  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  EventFragment.cs.in  GenerateEventFragments.cmake  Kitware.VTK.pub.snk  LICENSE  License-OS.txt  MsvcMacros.cmake  MummySettings.xml.in  README.md  WrappedObject.cs.in  gccxml.cxx.in  gccxml.wrapvtk.cxx.in  vtkImageData_Extra.cs  vtkObjectEL_Extra.cxx.in  vtkObject_EventFragments.cmake  vtkObject_Extra.cs.in  vtkProgrammableAttributeDataFilterEL_Extra.cxx  vtkProgrammableAttributeDataFilter_Extra.cs  vtkStringArrayEL_Extra.cxx  vtkStringArray_Extra.cs
Examples/BoxWidget/CS/: BoxWidget.cs  BoxWidget.csproj.in  BoxWidget.sln.in
Examples/BoxWidget/VB/: BoxWidget.sln.in  BoxWidget.vb  BoxWidget.vbproj.in
Examples/CubeAxes/CS/: CubeAxes.csproj.in  CubeAxes.sln.in  cubeAxes.cs
Examples/CubeAxes/VB/: CubeAxes.sln.in  CubeAxes.vb  CubeAxes.vbproj.in
Examples/Decimate/CS/: Decimate.csproj.in  Decimate.sln.in  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Program.cs
Examples/VolumeRendering/: head.vti
Logos/: Activiz Banner.psd
RenderWindowControl/: RenderWindowControl.Designer.cs  RenderWindowControl.cs  RenderWindowControl.csproj  RenderWindowControl.sln
RenderWindowControl/Properties/: AssemblyInfo.cs
SuperBuild/: CMakeLists.txt  RunActiVizSuperBuild.cmd
Testing/: BuildInstalledFiles.cmake  CMakeLists.txt  ExhaustMemoryQuicklyTest.cs  IntentionallyUninitializedData.cxx  RenderWindowControlTest.cs  vtkActor2DTest.cs  vtkCommandTest.cs  vtkConeSourceTest.cs  vtkImageDataExtraTests.cs  vtkImplicitFunctionSubclassTest.cs  vtkObjectModifiedEvtTest.cs  vtkObjectTest.cs  vtkPointsTest.cs  vtkProgrammableAttributeDataFilterTest.cs  vtkVersionTest.cs  vtkViewSelectionChangedEvtTest.cs  vtkWin32OpenGLRenderWindowTest.cs
Testing/TclToCsScript/: CMakeLists.txt  CSharpTestDriver.cs  Currently_Compiling_Tests.txt  GenerateVtkColors.py  GenerateVtkCommandList.py  GetDate.cmake  ReadMe.txt  TclToCsConvertorDriver.py  TclToCsHashMap.py  XML_Parser.py  recursiveglob.py  refdouble.hints  vtkTclParser.py  vtkTclToCsConvertor.py
Testing/TclToCsScript/Convert By Hand/Common/ComputationalGeometry/: AVclosedSplines.cs
Testing/TclToCsScript/Convert By Hand/Common/DataModel/: .AVLineIntersectQuadraticCells.cs.swp  AVLineIntersectQuadraticCells.cs
Testing/TclToCsScript/Convert By Hand/Common/Transforms/: AVMatrixToTransform.cs
Testing/TclToCsScript/Convert By Hand/Filtering/: AVSelectionLoop.cs  AVclosedSplines.cs
Testing/TclToCsScript/Convert By Hand/Filters/Core/: AVTestGridSynchronizedTemplates3D.cs  AVcombStreamers.cs  AVcombStreamers2.cs  AVfieldToPolyData.cs  AVfieldToRGrid.cs  AVfieldToUGrid.cs  AVmergeFilter.cs  AVmultipleIso.cs  AVpolyConn.cs  AVprobeComb.cs
Testing/TclToCsScript/Convert By Hand/Filters/Extraction/: AVExtractTensors.cs
Testing/TclToCsScript/Convert By Hand/Filters/General/: AVTestCellDerivs.cs  AVTestMultiBlockStreamer.cs  AVTestRectilinearGridToTetrahedra.cs  AVTestSplineFilter.cs  AVstreamTracer.cs
Testing/TclToCsScript/Convert By Hand/Filters/Geometry/: AVdataSetSurfaceFilter.cs  AVgeomFilter.cs  AVofficeStreamPoints.cs  AVrectGrid.cs
Testing/TclToCsScript/Convert By Hand/Filters/Modeling/: AVHyper.cs  AVHyperScalarBar.cs  AVTenEllip.cs  AVTestSpherePuzzle.cs
Testing/TclToCsScript/Convert By Hand/Filters/Parallel/: AVRectOutline.cs  AVTestExtractCTHPart.cs
Testing/TclToCsScript/Convert By Hand/Filters/Texture/: AVtextureThreshold.cs
Testing/TclToCsScript/Convert By Hand/Graphics/: AVEnSight6OfficeBin.cs  AVEnSightOfficeASCII.cs  AVEnSightOfficeBin.cs  AVEnSightRectGridASCII.cs  AVEnSightRectGridBin.cs  AVExtractTensors.cs  AVHyper.cs  AVLineIntersectQuadraticCells.cs  AVMatrixToTransform.cs  AVStreamPolyData.cs  AVTenEllip.cs  AVTestCellDerivs.cs  AVTestGridSynchronizedTemplates3D.cs  AVTestMultiBlockStreamer.cs  AVTestRectilinearGridToTetrahedra.cs  AVTestSpherePuzzleArrows.cs  AVTestSplineFilter.cs  AVcombStreamers.cs  AVcombStreamers2.cs  AVdataSetSurfaceFilter.cs  AVextractRectGrid.cs  AVfieldToPolyData.cs  AVfieldToRGrid.cs  AVfieldToUGrid.cs  AVgeomFilter.cs  AVmergeFilter.cs  AVmultipleIso.cs  AVofficeStreamPoints.cs  AVpolyConn.cs  AVprobe.cs  AVprobeComb.cs  AVrectGrid.cs  AVtextureThreshold.cs
Testing/TclToCsScript/Convert By Hand/IO/: AVPlot3DScalars.cs  AVPlot3DVectors.cs  AVTestImageWriters.cs  AVTestPolygonWriters.cs  AVTestTIFFReader.cs
Testing/TclToCsScript/Convert By Hand/IO/EnSight/: AVEnSight6OfficeBin.cs  AVEnSightOfficeASCII.cs  AVEnSightOfficeBin.cs  AVEnSightRectGridASCII.cs  AVEnSightRectGridBin.cs
Testing/TclToCsScript/Convert By Hand/IO/Geometry/: AVPlot3DScalars.cs  AVPlot3DVectors.cs  AVTestPolygonWriters.cs
Testing/TclToCsScript/Convert By Hand/IO/Image/: AVTestImageWriters.cs
Testing/TclToCsScript/Convert By Hand/IO/Parallel/: AVTestPDataSetReaderGrid.cs
Testing/TclToCsScript/Convert By Hand/Imaging/Core/: AVTestExtractVOI.cs
Testing/TclToCsScript/Convert By Hand/Parallel/: AVTestBranchExtentTranslator.cs  AVTestCutMaterial.cs  AVTestExtrudePiece.cs  AVTestImageStreamer.cs  AVTestPDataSetReaderGrid.cs  AVTestPImageWriter.cs  AVTestUnstructuredPieces.cs
Testing/TclToCsScript/Convert By Hand/Parallel/Core/: AVTestPolyDataPieces.cs  AVTestUnstructuredPieces.cs
Testing/TclToCsScript/Convert By Hand/Rendering/: AVlabeledContours.cs  AVpickCells.cs
Testing/TclToCsScript/Convert By Hand/Rendering/Core/: AVpickCells.cs
Testing/TclToCsScript/Convert By Hand/Rendering/Label/: AVlabeledContours.cs
Testing/TclToCsScript/Convert By Hand/Rendering/Volume/: AVTestFixedPointRayCasterNearest.cs  AVgaussian.cs
Testing/TclToCsScript/Convert By Hand/VolumeRendering/: AVTestFixedPointRayCasterNearest.cs  AVcursor3D.cs  AVgaussian.cs
Testing/TclToCsScript/Failing Tests/: SetExecute.txt  convert by hand.txt  reasons for refdouble fails.txt  ref double.txt
(+182 files in other folders)
